@@ -1,0 +1,32 @@
+# Copyright 2010 Free Software Foundation, Inc.
+#
+# This program is free software; you can redistribute it and/or modify
+# it under the terms of the GNU General Public License as published by
+# the Free Software Foundation; either version 3 of the License, or
+# (at your option) any later version.
+#
+# This program is distributed in the hope that it will be useful,
+# but WITHOUT ANY WARRANTY; without even the implied warranty of
+# MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
+# GNU General Public License for more details.
+#
+# You should have received a copy of the GNU General Public License
+# along with this program.  If not, see <http://www.gnu.org/licenses/>.
+#
+
+set testfile "anon"
+set srcfile $testfile.c
+if { [prepare_for_testing $testfile.exp $testfile $srcfile {debug}] } {
+    return -1
+}
+
+if { ![runto main] } then {
+    fail "run to main"
+    return
+}
+
+set loc [gdb_get_line_number "break here"]
+gdb_test "break $loc" ".*Breakpoint 2 .*" "set breakpoint in anon.c"
+gdb_continue_to_breakpoint "continue to breakpoint in anon.c"
+
+gdb_test "print val.data.six" " = 6" "print val.data.six"
